fix: hide watchlist content on overflow

--- a/src/components/Watchlist/Watchlist.module.css
+++ b/src/components/Watchlist/Watchlist.module.css
@@ -26,7 +26,6 @@
 
 .watchlist {
     margin-top: 5px;
-    overflow: hidden;
 }
 
 .dropdown {
@@ -83,6 +82,9 @@
 }
 
 .watchlistSize {
-    height: calc(100vh - 35px - 30vh);
+    height: 100%;
+    overflow-y: scroll;
+    padding: 0;
+    overflow-x: hidden;
 }
 
